removed email addresses for the PC members

--- a/index.html
+++ b/index.html
@@ -156,66 +156,66 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <table cellspacing="0" cellpadding="0" float="left">
 <tr>
 <td>
-<li>John A. Bateman</td> <td>Universitat Bremen, ateman@uni-bremen.de</td></li>
+<li>John A. Bateman</td> <td>Universitat Bremen</td></li>
   </tr>
  <tr>
-<td><li>Anthony Cohn</td><td>University of Leeds, A.G.Cohn@leeds.ac.uk</li></td>
+<td><li>Anthony Cohn</td><td>University of Leeds</li></td>
 </tr>
   <tr>
-<td><li>Steven Bethard</td><td> The University of Arizona, bethard@email.arizona.edu </td></li>
+<td><li>Steven Bethard</td><td> The University of Arizona</td></li>
 </tr>
 <tr>
 <td>
-<li>Raffaella Bernardi</td><td>University of Trento, bernardi@disi.unitn.it</td></li>
+<li>Raffaella Bernardi</td><td>University of Trento</td></li>
 </tr>
 <tr>
-<td><li>Mehul Bhatt</td><td>Örebro University, Mehul.Bhatt@oru.se</li></td>
+<td><li>Mehul Bhatt</td><td>Örebro University</li></td>
 </tr>
 <tr>
 <td>
-<li> Yonatan Bisk</td> <td>University of Washington, ybisk@yonatanbisk.com</li></td>
+<li> Yonatan Bisk</td> <td>University of Washington</li></td>
 </tr>
 <tr>
-<td><li>Johan Bos</td><td>University of Groningen, johan.bos@rug.nl</li></td>
+<td><li>Johan Bos</td><td>University of Groningen</li></td>
 </tr>
 <tr>
-<td><li>Joyce Chai</td><td>Michigan State University, jchai@cse.msu.edu</li></td>
+<td><li>Joyce Chai</td><td>Michigan State University</li></td>
 </tr>
 <tr>
-<td><li>Angel Xuan Chang</td><td>Stanford University, angelx@cs.stanford.edu</li></td>
+<td><li>Angel Xuan Chang</td><td>Stanford University</li></td>
 </tr>
 <tr>
-<td><li>Guillem Collell</td><td> KU Leuven, guillem.collelltalleda@kuleuven.be</li></td>
+<td><li>Guillem Collell</td><td> KU Leuven</li></td>
 </tr>
 <tr>
-<td><li>Zoe Falomir</td><td>Universitat Bremen, zfalomir@uni-bremen.de</li></td>
+<td><li>Zoe Falomir</td><td>Universitat Bremen</li></td>
 </tr>
 <tr>
-<td><li>Julia Hockenmaier</td><td>University of Illinois at Urbana-Champaign, juliahmr@illinois.edu</li></td>
+<td><li>Julia Hockenmaier</td><td>University of Illinois at Urbana-Champaign</li></td>
 </tr>
 <tr>
-<td><li>Inderjeet Mani</td><td>Yahoo Labs, inderjeet.mani@gmail.com</li></td>
+<td><li>Inderjeet Mani</td><td>Yahoo Labs</li></td>
 </tr>
 <tr>
-<td><li>Kirk Roberts</td><td>The University of Texas, kirk.roberts@uth.tmc.edu</li></td>
+<td><li>Kirk Roberts</td><td>The University of Texas</li></td>
 </tr>
 <tr>
-<td><li>Manolis Savva</td><td>Princeton University, msavva@princeton.edu</li></td>
+<td><li>Manolis Savva</td><td>Princeton University</li></td>
 </tr>
 <tr>
-<td><li>Martijn van Otterlo</td><td>Vrije Universiteit Amsterdam, mail@martijnvanotterlo.nl</li></td>
+<td><li>Martijn van Otterlo</td><td>Vrije Universiteit Amsterdam</li></td>
 </tr>
 <tr>
-<td><li>Bonnie Dorr</td><td>IHMC, bdorr@ihmc.us</li></td>
+<td><li>Bonnie Dorr</td><td>IHMC</li></td>
 </tr>
 <tr>
-<td><li>Bruno Martins</td><td>University of Lisbon, bruno.g.martins@tecnico.ulisboa.pt</li></td>
+<td><li>Bruno Martins</td><td>University of Lisbon</li></td>
 </tr>
 <tr>
 <td><li>Mari Broman Olsen</td><td>Microsoft</li></td>
 </tr>
 <tr>
-<td><li>Clare Voss</td><td>ARL, clare.r.voss.civ@mail.mil</li></td>
+<td><li>Clare Voss</td><td>ARL</li></td>
 </tr>
 
 </table>
