--- a/index.html
+++ b/index.html
@@ -102,13 +102,9 @@ The workshop aims to initiate discussions across fields dealing with spatial lan
 
 <a id="invitedSpeakers" class="anchor" href="#invitedSpeakers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Invited Speakers</h2>
 
-<table cellspacing="0" cellpadding="0" style="width:100%">
-<tr>
-<td>
- <li><a href="https://engineering.leeds.ac.uk/staff/76/">Anthony G Cohn</a></td>
-  <td>University of Leeds</li></td>
-</tr>
-</table>
+<ul>
+ <font size="4" color="black"><b><li><a href="https://engineering.leeds.ac.uk/staff/76/">Anthony G Cohn</a>, University of Leeds</li></b></font>
+</ul>
 
 
 
