--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
   
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 
-<h2>Organizers Committee</h2>
+<h2>Organizing Committee</h2>
 
 <table cellspacing="0" cellpadding="0" style="width:100%">
 <tr>
