--- a/index.html
+++ b/index.html
@@ -104,12 +104,15 @@ The workshop aims to initiate discussions across fields dealing with spatial lan
 
 <ul>
  <li> 
-   <font size="4" color="black"><b><a href="https://engineering.leeds.ac.uk/staff/76/">Anthony G Cohn</a>, University of Leeds</b></font> 
+   <font size="3" color="black"><b><a href="https://engineering.leeds.ac.uk/staff/76/">Anthony G Cohn</a>, University of Leeds</b></font> 
    <br />
    <b>Title: Natural Language Acquisition and Grounding for Embodied Robotic Systems</b>
    <br />
    Abtract: We present a cognitively plausible novel framework capable of learning the grounding in visual semantics and the grammar of natural language commands given to a robot in a table top environment. The input to the system consists of video clips of a manually controlled robot arm, paired with natural language commands describing the action. No prior knowledge is assumed about the meaning of words, or the structure of the language, except that there are different classes of words (corresponding to observable actions, spatial relations, and objects and their observable properties). The learning process automatically clusters the continuous perceptual spaces into concepts corresponding to linguistic input. A novel relational graph representation is used to build connections between language and vision. As well as the grounding of language to perception, the system also induces a set of probabilistic grammar rules. The knowledge learned is used to parse new commands involving previously unseen objects.	
 </li>
+<li> 
+   <font size="3" color="black"><b><a href="http://www.cs.rochester.edu/~james/">James Allen</a>, IHMC, University of Rochester</b></font> 
+
 </ul>
 
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
