updated the dates

--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 
  <a id="important-dates" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Important Dates</h2>
  <ul>
-  <li>Submission Deadline: To be announced</li>
-  <li>Notification: To be announced </li>
+  <li>Submission Deadline: 2 March 2018</li>
+  <li>Notification: 2 April 2018 </li>
+  <li> Camera Ready deadline: 16 April 2018</li>
   <li>Workshop Days: To be announced </li>
  </ul>
   
