updated the dates

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
  <ul>
   <li>Submission Deadline: 2 March 2018</li>
   <li>Notification: 2 April 2018 </li>
-  <li> Camera Ready deadline: 16 April 2018</li>
-  <li>Workshop Days: To be announced </li>
+  <li>Camera Ready deadline: 16 April 2018</li>
+  <li>Workshop Day: To be announced </li>
  </ul>
   
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
