workshop day and minor phrases

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ The workshop aims to initiate discussions across fields dealing with spatial lan
 </p>
 
 <ul>
-<li>Spatial meaning representations, ontologies, annotation schemes, linguistic corpora.</li>
+<li>Spatial meaning representations, continuous representations, ontologies, annotation schemes, linguistic corpora.</li>
 <li>Spatial information extraction from natural language.</li>
 <li>Spatial information extraction in robotics, multimodal environments, navigational instructions.</li>
 <li>Text mining for spatial information in GIS systems.</li>
@@ -108,11 +108,11 @@ The workshop aims to initiate discussions across fields dealing with spatial lan
    <br />
    <b>Title: Natural Language Acquisition and Grounding for Embodied Robotic Systems</b>
    <br />
-   Abtract: We present a cognitively plausible novel framework capable of learning the grounding in visual semantics and the grammar of natural language commands given to a robot in a table top environment. The input to the system consists of video clips of a manually controlled robot arm, paired with natural language commands describing the action. No prior knowledge is assumed about the meaning of words, or the structure of the language, except that there are different classes of words (corresponding to observable actions, spatial relations, and objects and their observable properties). The learning process automatically clusters the continuous perceptual spaces into concepts corresponding to linguistic input. A novel relational graph representation is used to build connections between language and vision. As well as the grounding of language to perception, the system also induces a set of probabilistic grammar rules. The knowledge learned is used to parse new commands involving previously unseen objects.	
+   Abstract: We present a cognitively plausible novel framework capable of learning the grounding in visual semantics and the grammar of natural language commands given to a robot in a table top environment. The input to the system consists of video clips of a manually controlled robot arm, paired with natural language commands describing the action. No prior knowledge is assumed about the meaning of words, or the structure of the language, except that there are different classes of words (corresponding to observable actions, spatial relations, and objects and their observable properties). The learning process automatically clusters the continuous perceptual spaces into concepts corresponding to linguistic input. A novel relational graph representation is used to build connections between language and vision. As well as the grounding of language to perception, the system also induces a set of probabilistic grammar rules. The knowledge learned is used to parse new commands involving previously unseen objects.	
 </li>
 <li> 
    <font size="3" color="black"><b><a href="http://www.cs.rochester.edu/~james/">James F. Allen</a>, IHMC, University of Rochester</b></font> 
-
+Title and Abstract TBA. 
 </ul>
 
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
@@ -125,7 +125,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
   <li>Submission Deadline: 2 March 2018</li>
   <li>Notification: 2 April 2018 </li>
   <li>Camera Ready deadline: 16 April 2018</li>
-  <li>Workshop Day: To be announced </li>
+  <li>Workshop Day: 5 or 6 June, TBD</li>
  </ul>
   
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
