--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <td><li>Bruno Martins</td><td>University of Lisbon</li></td>
 </tr>
 <tr>
-<td><li>Mari Broman Olsen</td><td>Microsoft Research</li></td>
+<td><li>Mari Broman Olsen</td><td>Microsoft</li></td>
 </tr>
 <tr>
 <td><li>Clare Voss</td><td>ARL</li></td>
