--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <li>Raffaella Bernardi</td><td>University of Trento</td></li>
 </tr>
 <tr>
-<td><li>Mehul Bhatt</td><td>Örebro University</li></td>
+<td><li>Mehul Bhatt</td><td>Örebro University, University of Bremen</li></td>
 </tr>
 <tr>
 <td>
