--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ href="stylesheets/github-light.css" media="screen">
 	      <!--li><a href="#panel">Panel</a></li-->
 	      <!--li><a href="#submission-info">Submission</a></li-->
 	      <li><a href="#organizers">Organizers</a></li>
+         <li><a href="#program-commitee">Program Committee</a></li>		
          </ul>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
