--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
   <li>Submission Deadline: 2 March 2018</li>
   <li>Notification: 2 April 2018 </li>
   <li>Camera Ready deadline: 16 April 2018</li>
-  <li>Workshop Day: 5 or 6 June, TBD</li>
+  <li>Workshop Day: 6 June, 2018</li>
  </ul>
   
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
