--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SpLU 2018 by SpLU</title>
+<title>SpLU 2018 by   </title>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link
     href='http://fonts.googleapis.com/css?family=Open+Sans:400,700'
@@ -23,7 +23,7 @@ href="stylesheets/github-light.css" media="screen">
 
       <h1 class="project-name">SpLU 2018</h1>
       <h2 class="project-tagline">First International Workshop on Spatial Language Understanding</h2>
-<h2  class="project-tagline">In conjunction with The 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="https://aaai.org/Conferences/AAAI/aaai18.php">(NAACL-HLT 2018)</a>, June 1–6, 2018, New Orleans, Louisiana, USA.</h2>
+<h2  class="project-tagline">In conjunction with The 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="https://aaai.org/Conferences/AAAI/aaai18.php">(NAACL-HLT 2018)</a>, June 6, 2018, New Orleans, Louisiana, USA.</h2>
 <br>
 
 </section>
