--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 
  <a id="important-dates" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Important Dates</h2>
  <ul>
-  <li>Submission Deadline: 2 March 2018</li>
+  <li>Submission Deadline: <strike>2 March 2018</strike> 15 March 2018</li>
   <li>Notification: 2 April 2018 </li>
   <li>Camera Ready deadline: 16 April 2018</li>
   <li>Workshop Day: 6 June, 2018</li>
