--- a/index.html
+++ b/index.html
@@ -142,25 +142,25 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
   <td>Tulane University, <a href="https://www.ihmc.us">IHMC</a></li></td>
   <td> pkordjam@tulane.edu</td>
 </tr>
+
 <tr>
-<td><li><a href="https://www.ihmc.us/groups/abhatia/">Archna Bhatia</li></td>
+<td><li><a href="https://www.ihmc.us/groups/abhatia/">Archna Bhatia</a></li></td>
 <td>IHMC</td>
 <td>abhatia@ihmc.us</td>
 </tr>
 
-<tr> <td><li><a href="https://www.researchgate.net/profile/Umar_Manzoor">Umar Manzoor</a></li></td> 
-<td>Tulane University</td> 
-<td>umanzoor@tulane.edu</td>
-</tr>
-
-<tr>
-<td><li><a href="http://jamespusto.com/">James Pustejovsky</a></li></td> <td>Brandeis University</td>
+<tr> 
+ <td><li><a href="http://jamespusto.com/">James Pustejovsky</a></li></td> 
+ <td>Brandeis University</td>
  <td>jamesp@cs.brandeis.edu</td> 
  </tr>
- <tr>
-<td><li><a href="https://people.cs.kuleuven.be/~sien.moens/"> Marie-Francine Moens</a> </li></td> <td>KULeuven</td>
- <td>sien.moens@cs.kuleuven.be</td> 
- </tr>
+
+<tr>
+<td><li><a href="https://people.cs.kuleuven.be/~sien.moens/"> Marie-Francine Moens</a> </li></td> 
+<td>KULeuven</td>
+<td>sien.moens@cs.kuleuven.be</td> 
+</tr>
+
 </table>
 
 <a id="program-commitee" class="anchor" href="#program-commitee" aria-hidden="true"><span class="octicon octicon-link"></span></a>
@@ -228,12 +228,13 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <tr>
 <td><li>Clare Voss</td><td>ARL</li></td>
 </tr>
-
+<tr>
+ <td><li>Umar Manzoor</li></td> 
+ <td>Tulane University</td> 
+ </tr>
 </table>
-
 </div>
-
-    </section>
+</section>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
