--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <h2>Accepted Papers</h2>
 <ul>
  <li><b>Lexical Conceptual Structure of Literal and Metaphorical Spatial Language: A Case Study of "Push"</b>, Bonnie Dorr and Mari Olsen</li>
- <li> <b>A SEMANTIC ANALYSIS OF REFERENCE TO SPATIAL PROPERTIES</b>, Norman Sondheimer</b></li>
+ <li> <b>A Semantic Analysis of Reference to Spatial Properties</b>, Norman Sondheimer</b></li>
  <li><b>The Case for Systematically Derived Spatial Language Usage</b>, Bonnie Dorr and Clare Voss</li>
  <li><b>Building and Learning Structures in a Situated Blocks World Through Deep Language Understanding</b>, Ian Perera, James Allen, Choh Man Teng and Lucian Galescu</li>
  <li><b> Computational Models for Spatial Prepositions</b>, Georgiy Platonov and Lenhart Schubert</li>
