--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <h2>Accepted Papers</h2>
 <ul>
- <li><b>Lexical Conceptual Structure of Literal and Metaphorical Spatial Language: A Case Study of "Push"</b>, Bonnie Dorr and Mari Olsen</li>
- <li> <b>A Semantic Analysis of Reference to Spatial Properties</b>, Norman Sondheimer</b></li>
- <li><b>The Case for Systematically Derived Spatial Language Usage</b>, Bonnie Dorr and Clare Voss</li>
- <li><b>Building and Learning Structures in a Situated Blocks World Through Deep Language Understanding</b>, Ian Perera, James Allen, Choh Man Teng and Lucian Galescu</li>
- <li><b> Computational Models for Spatial Prepositions</b>, Georgiy Platonov and Lenhart Schubert</li>
- <li><b>Exploring the functional and geometric bias of spatial relations using neural language models</b>, Simon Dobnik, Mehdi Ghanimifard and John Kelleher</li>
- <li><b>Points, Paths, and Playscapes: Large-scale Spatial Language Understanding Tasks Set in the Real World</b>, Jason Baldridge, Tania Bedrax-Weiss, Daphne Luong, Srini Narayanan, Bo Pang, Fernando Pereira, Radu Soricut, Michael Tseng and Yuan Zhang</li>
- <li><b> Representing Spatial Relations in FrameNet</b>, Miriam R L Petruck and Michael J Ellsworth </li>
- <li><b>Anaphora Resolution for Improving Spatial Relation Extraction from Text</b>, Umar Manzoor and Parisa Kordjamshidi </li>
+ <li><b>Lexical Conceptual Structure of Literal and Metaphorical Spatial Language: A Case Study of "Push"</b>, Bonnie Dorr and Mari Olsen.</li>
+ <li> <b>A Semantic Analysis of Reference to Spatial Properties</b>, Norman Sondheimer.</b> (published work)</li>
+ <li><b>The Case for Systematically Derived Spatial Language Usage</b>, Bonnie Dorr and Clare Voss.</li>
+ <li><b>Building and Learning Structures in a Situated Blocks World Through Deep Language Understanding</b>, Ian Perera, James Allen, Choh Man Teng and Lucian Galescu.</li>
+ <li><b> Computational Models for Spatial Prepositions</b>, Georgiy Platonov and Lenhart Schubert.</li>
+ <li><b>Exploring the functional and geometric bias of spatial relations using neural language models</b>, Simon Dobnik, Mehdi Ghanimifard and John Kelleher.</li>
+ <li><b>Points, Paths, and Playscapes: Large-scale Spatial Language Understanding Tasks Set in the Real World</b>, Jason Baldridge, Tania Bedrax-Weiss, Daphne Luong, Srini Narayanan, Bo Pang, Fernando Pereira, Radu Soricut, Michael Tseng and Yuan Zhang.</li>
+ <li><b> Representing Spatial Relations in FrameNet</b>, Miriam R L Petruck and Michael J Ellsworth.</li>
+ <li><b>Anaphora Resolution for Improving Spatial Relation Extraction from Text</b>, Umar Manzoor and Parisa Kordjamshidi.</li>
 </ul>
 
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
