--- a/index.html
+++ b/index.html
@@ -132,6 +132,98 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
  </ul>
  
 <a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+
+<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Schedule</h2>
+<table class="table" style="width:100%">
+      <tr>
+        <td>9:00-9:10</td>
+        <td><strong>Opening remarks</strong></td> 
+        <td>Parisa Kordjamshidi</td>
+      </tr>
+  
+      <tr class="success">
+        <td>9:10-10:10</td>
+        <td><strong>Keynote Talk. </strong> Natural Language Acquisition and Grounding for Embodied Robotic Systems
+        </td> 
+        <td> Anthony G. Cohn </td>
+      </tr>
+
+   <tr>
+   <td>10:10-10:30</td>
+   <td><strong>Accepted Paper. </strong> Exploring the Functional and Geometric Bias of Spatial Relations Using Neural Language Models</td> 
+    <td>Simon Dobnik, Mehdi Ghanimifard and John Kelleher</td>
+    </tr>
+
+     <tr class="info">
+        <td>10:30-11:00</td>
+        <td><strong>Coffee Break</strong></td> 
+        <td> </td>
+      </tr>
+
+     <tr>
+     <td>11:00-11:20</td>
+      <td><strong>Accepted Paper. </strong> Building and Learning Structures in a Situated Blocks World Through Deep Language
+Understanding </td><td>Ian Perera, James Allen, Choh Man Teng and Lucian Galescu</td> 
+      </tr>
+
+<tr>
+  <tr>
+
+<td>11:20-11:40</td>
+      <td><strong>Accepted Paper. </strong> Computational Models for Spatial Prepositions</td><td>Georgiy Platonov and Lenhart Schubert</td> 
+      </tr>
+
+      <tr>
+
+     <td>11:40-12:00</td>
+      <td><strong>Accepted Paper. </strong> Lexical Conceptual Structure of Literal and Metaphorical Spatial Language: A
+Case Study of "Push"</td><td>Bonnie Dorr and Mari Olsen</td> 
+      </tr>
+
+<tr>
+     <td>12:00-12:20</td>
+      <td><strong>Accepted Paper. </strong> Representing Spatial Relations in FrameNet </td><td>Miriam R L Petruck and Michael J Ellsworth</td> 
+      </tr>
+
+     <tr class="info">
+        <td>12:20-2:10</td>
+        <td><strong>Lunch Break </strong></td> 
+        <td> </td>
+      </tr>
+      <tr class="success">
+        <td>2:10-3:10</td>
+        <td><strong>Invited talk. </strong>Understanding Spatial Expressions
+</td> <td>James F. Allen</td> 
+
+  <tr>
+     <td>03:10-03:30</td>
+      <td><strong>Accepted Paper. </strong> Points, Paths, and Playscapes: Large-scale Spatial Language Understanding Tasks
+Set in the Real World </td><td>Jason Baldridge, Tania Bedrax-Weiss, Daphne Luong, Srini Narayanan, Bo Pang,
+Fernando Pereira, Radu Soricut, Michael Tseng and Yuan Zhang</td> 
+     <tr>
+      <tr class="info">
+        <td>3:30-4:00</td>
+        <td><strong>Coffee Break </strong></td> 
+        <td></td>
+      </tr>
+
+  <tr>
+     <td>04:00-04:20</td>
+      <td><strong>Accepted Paper. </strong> Anaphora Resolution for Improving Spatial Relation Extraction from Text</td><td>Umar Manzoor and Parisa Kordjamshidi</td> 
+     </tr>
+
+<tr>
+     <td>04:20-04:40</td>
+      <td><strong>Accepted Paper. </strong> The Case for Systematically Derived Spatial Language Usage</td><td>Bonnie Dorr and Clare Voss</td> 
+     </tr>
+
+      <tr>
+        <td>4:40-5:30</td>
+        <td><strong>Panel:</strong> James Pustejovsky, Marie-Francine Moens, James F. Allen, Bonnie Dorr, Anthony
+G. Cohn</td> <td></td>
+      </tr>
+    </table>
+
 <h2>Accepted Papers</h2>
 <ul>
  <li><b>Lexical Conceptual Structure of Literal and Metaphorical Spatial Language: A Case Study of "Push"</b>, Bonnie Dorr and Mari Olsen.</li>
