--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Case Study of "Push"</td><td>Bonnie Dorr and Mari Olsen</td>
       </tr>
       <tr class="success">
         <td>2:10-3:10</td>
-        <td><strong>Invited talk. </strong>Understanding Spatial Expressions
+        <td><strong>Keynote talk. </strong>Understanding Spatial Expressions
 </td> <td>James F. Allen</td> 
 
   <tr>
