--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ The workshop aims to initiate discussions across fields dealing with spatial lan
 <li> 
    <font size="3" color="black"><b><a href="http://www.cs.rochester.edu/~james/">James F. Allen</a>, IHMC, University of Rochester</b></font> 
    <br/>
-Title and Abstract TBA. 
+   <b>Title: Understanding Spatial Expressions</b>
+Abstract TBA. 
 </ul>
 
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
