--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@ href="stylesheets/github-light.css" media="screen">
 
       <h1 class="project-name">SpLU 2018</h1>
       <h2 class="project-tagline">First International Workshop on Spatial Language Understanding</h2>
-<h2  class="project-tagline">In conjunction with The 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="http://naacl2018.org">(NAACL-HLT 2018)</a>, June 6, 2018, New Orleans, Louisiana, USA.</h2>
+<h2  class="project-tagline">In conjunction with The 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="http://naacl2018.org">(NAACL-HLT 2018)</a>, June 6, 2018, New Orleans, Louisiana, USA.
+<br>
+<br>
+Room: Bolden 4
+</h2>
 <br>
 
 </section>
