--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Case Study of "Push"</td><td>Bonnie Dorr and Mari Olsen</td>
       </tr>
       <tr class="success">
         <td>2:10-3:10</td>
-        <td><strong>Keynote Talk. </strong>Understanding Spatial Expressions
+        <td><strong>Keynote Talk. </strong>Understanding Spatial Expressions <a href="slides/SPatialUnderstanding.pdf"> [Slides]</a>
 </td> <td>James F. Allen</td> 
 
   <tr>
