--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@ href="stylesheets/github-light.css" media="screen">
 
       <h1 class="project-name">SpLU 2018</h1>
       <h2 class="project-tagline">First International Workshop on Spatial Language Understanding</h2>
-<h2  class="project-tagline">In conjunction with The 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="http://naacl2018.org">(NAACL-HLT 2018)</a>, June 6, 2018, New Orleans, Louisiana, USA.
+<h2  class="project-tagline">In conjunction with The 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="http://naacl2018.org">(NAACL-HLT 2018)</a>, June 6, 2018, New Orleans, Louisiana, USA. 
 <br>
 <br>
 Room: Bolden 4
+<br>
+<a href="https://aclanthology.info/volumes/proceedings-of-the-first-international-workshop-on-spatial-language-understanding"> (Proceeding)</a>
 </h2>
 <br>
 
@@ -139,7 +141,9 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
  
 <a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 
-<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Schedule</h2>
+<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Schedule
+<a href="https://aclanthology.info/volumes/proceedings-of-the-first-international-workshop-on-spatial-language-understanding"> (Proceeding)</a>
+</h2>
 <table class="table" style="width:100%">
       <tr>
         <td>9:00-9:10</td>
