--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ href="stylesheets/github-light.css" media="screen">
 <br>
 Room: Bolden 4
 <br>
-<a href="https://aclanthology.info/volumes/proceedings-of-the-first-international-workshop-on-spatial-language-understanding"> (Proceeding)</a>
+<a href="https://aclanthology.info/volumes/proceedings-of-the-first-international-workshop-on-spatial-language-understanding"> (Proceedings)</a>
 </h2>
 <br>
 
@@ -142,7 +142,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 
 <a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Schedule
-<a href="https://aclanthology.info/volumes/proceedings-of-the-first-international-workshop-on-spatial-language-understanding"> (Proceeding)</a>
+<a href="https://aclanthology.info/volumes/proceedings-of-the-first-international-workshop-on-spatial-language-understanding"> (Proceedings)</a>
 </h2>
 <table class="table" style="width:100%">
       <tr>
