--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ The workshop aims to initiate discussions across fields dealing with spatial lan
 <li> 
    <font size="3" color="black"><b><a href="http://www.cs.rochester.edu/~james/">James F. Allen</a>, IHMC, University of Rochester</b></font> 
    <br/>
-   <b>Title: Understanding Spatial Expressions</b>
+   <b>Title: Broad Coverage Spatial Language Understanding</b>
    <br />
    Abstract TBA. 
 </ul>
