updated webpage for SpLU-2019 and modified it to also include older workshop's page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ Room: TBA
 	      <!--li><a href="#panel">Panel</a></li-->
 	      <!--li><a href="#submission-info">Submission</a></li-->
 	      <li><a href="#organizers">Organizers</a></li>
-         <li><a href="#program-commitee">Program Committee</a></li>	
+         <li><a href="#program-commitee">Program Committee</a></li>
+         <li><a href="#olderworkshops">Older Workshops</a></li>	
          </ul>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
@@ -163,7 +164,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <tr>
 <td><li><a href="http://www.cs.rochester.edu/~james/"> James F. Allen</a> </li></td> 
 <td>University of Rochester, IHMC</td>
-<td>sien.moens@cs.kuleuven.be</td> 
+<td>jallen@ihmc.us</td> 
 </tr>
 
 </table>
@@ -250,7 +251,15 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
  </tr>
 </table>
 </div>
+
+<a id="olderworkshops" class="anchor" href="#olderworkshops" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+<h2>Older Workshops</h2>
+
+<a href="https://spatial-language.github.io/old_SpLU_workshops/SpLU_2018/"> SpLU 2018</a>
+
 </section>
+
+
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
