--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Room: TBA
 	      <!--li><a href="#submission-info">Submission</a></li-->
 	      <li><a href="#organizers">Organizers</a></li>
          <li><a href="#program-commitee">Program Committee</a></li>
-         <li><a href="#olderworkshops">Older Workshops</a></li>	
+         <li><a href="#pastworkshops">Past Workshops</a></li>	
          </ul>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
@@ -252,8 +252,8 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 </table>
 </div>
 
-<a id="olderworkshops" class="anchor" href="#olderworkshops" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<h2>Older Workshops</h2>
+<a id="pastworkshops" class="anchor" href="#pastworkshops" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+<h2>Past Workshops</h2>
 
 <a href="https://spatial-language.github.io/old_SpLU_workshops/SpLU_2018/"> SpLU 2018</a>
 
