invited speaker, color, Email

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ href="stylesheets/github-light.css" media="screen">
   <body>
 <section class="page-header">
 
-      <h1 class="project-name">SpLU 2019</h1>
+      <h1 class="project-name">SpLU 2019</h1∫>
       <h2 class="project-tagline">Second International Workshop on Spatial Language Understanding</h2>
 <h2  class="project-tagline">In conjunction with The 2019 Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="http://naacl2019.org">(NAACL-HLT 2019)</a>, June 6/7, 2019, Minneapolis, USA. 
 <br>
@@ -116,7 +116,7 @@ The workshop aims to initiate discussions across fields dealing with spatial lan
 
 <ul>
  <li> 
-   <font size="3" color="black"><b>TBA</b></font> 
+   <font size="3" color="black"><b>Joyce Chai, Michigan State University </b></font> 
    <br />
 </li>
 <li> 
@@ -139,7 +139,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 
-<h2>Organizing Committee</h2>
+<h2>Organizing Committee</h2> [splu-2019@googlegroups.com]
 
 <table cellspacing="0" cellpadding="0" style="width:100%">
 <tr>
