Evacuated and Joined RoboNLP

--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@ href="stylesheets/github-light.css" media="screen">
 <section class="page-header">
 
       <h1 class="project-name">SpLU 2019</h1∫>
-      <h2 class="project-tagline">Second International Workshop on Spatial Language Understanding</h2>
-<h2  class="project-tagline">In conjunction with The 2019 Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="http://naacl2019.org">(NAACL-HLT 2019)</a>, June 6/7, 2019, Minneapolis, USA. 
-<br>
-<br>
-Room: TBA
+      <h2 class="project-tagline"><a href="https://splu-robonlp.github.io">Second International Workshop on Spatial Language Understanding (SpLU) Joined with Grounded Communication for Robotics (RoboNLP)</a></h2>
+<h2  class="project-tagline">In conjunction with The 2019 Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="http://naacl2019.org">(NAACL-HLT 2019)</a>, June 6, 2019, Minneapolis, USA. 
 <br>
 </h2>
 <br>
@@ -45,21 +42,7 @@ Room: TBA
             </button>
            
           </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#overview">Overview</a></a></li>
-              <li><a href="#invitedSpeakers">Invited Speakers</a></li>
-	      <li><a href="#submission-info">Submission</a></li>
-         <li><a href="#important-dates">Important Dates</a></li>
-	      <!--li><a href="#demos">Demos</a></li-->
-	      <!--li><a href="#panel">Panel</a></li-->
-	      <!--li><a href="#submission-info">Submission</a></li-->
-	      <li><a href="#organizers">Organizers</a></li>
-         <li><a href="#program-commitee">Program Committee</a></li>
-         <li><a href="#pastworkshops">Past Workshops</a></li>	
-         </ul>
-            </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
+         
       </nav>
 
 </section>
@@ -67,190 +50,6 @@ Room: TBA
 
 <section class="main-content">
 
-<h2>Overview</h2>
-
-<p>
-One of the essential functions of natural language is to express spatial relationships between objects. Linguistic constructs can encode highly complex, relational structures of objects, spatial relations between them, and patterns of motion through space relative to some reference point. Spatial language understanding is useful in many areas of research endeavors relating to and/or making use of human language, including robotics, navigation, geographic information systems, traffic management, natural language understanding and translation, and query answering systems. Compared to other semantically specialized linguistic tasks, standardizing tasks related to spatial language seems to be more challenging as it is harder to obtain an agreeable set of concepts and relationships and a formal spatial meaning representation that is domain independent. This has made research results on spatial language learning and reasoning diverse, task-specific and, to some extent, not comparable. While formal meaning representation is a general issue for language understanding, formalizing spatial concepts and building formal reasoning models based on those constitute challenging research problems with a wealth of prior foundational research that can be exploited and linked to language understanding. Attempts to arrive at a common set of basic concepts and relationships as well as making existing corpora inter-operable, however, can help avoid duplicated efforts within as well as across fields and instead focus on further developments in the respective fields for automatic learning and reasoning. </p> 
-
-<p> 
-Existing qualitative and quantitative representation and reasoning models can be used for investigation of interoperabiltiy of machine learning and reasoning over spatial semantics. Research endeavors in this area could provide insights into many challenges of language understanding in general. Spatial semantics is also very well-connected and relevant to visualization of natural language and grounding language into perception, central to dealing with configurations in the physical world and motivating a combination of vision and language for richer spatial understanding. </p>
-
-<p> 
-In this second round of workshop, the same major topics will be focused as: </p>
-
-<ol>
-
-<li> Spatial Language Meaning Representation (Continuous, Symbolic)</li>
-<li> Spatial Language Learning </li>
-<li> Spatial Language Reasoning </li>
-<li> Combining Vision and Language for Spatial Understanding</li>
-</ol>
-
-<p>Spatial Language Meaning Representation and Ontologies includes cognitive and linguistically motivated spatial knowledge representation and ontologies, qualitative and quantitative representation models used for meaning representation of language, related annotation schemes and efforts for creating specialized corpora. Moreover, continuous meaning representations for spatial concepts is another aspect to be highlighted in the workshop. Spatial Language Learning considers symbolic and sub-symbolic techniques and computational models for spatial information extraction, semantic parsing, spatial co-reference within a global context that includes discourse and pragmatics from data or formal models.
-
-Regarding the reasoning aspect, the workshop emphasizes the role of qualitative and quantitative formal representations in helping spatial reasoning based on natural language and the possibility of learning such representations from data; whether we need these formal representations to support reasoning or there are other alternative ideas.  
-
-For the multimodality aspect, answers to questions such as the following will be discussed: (1) Which representations are appropriate for different modalities and which ones are modality independent? (2) How can we exploit visual information for spatial language learning and reasoning? All related applications are welcome, including text to scene conversion, spatial and visual question answering, spatial understanding in multimodal setting for robotics and navigation tasks, etc. 
-
-The workshop aims to initiate discussions across fields dealing with spatial language along with other modalities. The desired outcome is identification of shared as well as unique challenges, problems and future directions across the fields and various application domains related to spatial language understanding. </p> 
-
-<p>
-<b>Topics.</b> The specific topics include but are not limited to: 
-</p>
-
-<ul>
-<li>Spatial meaning representations, continuous representations, ontologies, annotation schemes, linguistic corpora.</li>
-<li>Spatial information extraction from natural language.</li>
-<li>Spatial information extraction in robotics, multimodal environments, navigational instructions.</li>
-<li>Text mining for spatial information in GIS systems, geographical knowledge graphs.</li>
-<li>Spatial question answering, spatial information for visual question answering</li>
-<li>Quantitative and qualitative reasoning with spatial information</li>
-<li>Spatial reasoning based on natural language or multimodal information (vision and language)</li>
-<li>Extraction of spatial common sense knowledge</li>
-<li>Visualization of spatial language in 2-D and 3-D</li>
-<li>Spatial natural language generation</li>
-<li>Spatial language grounding</li>
-</ul>
-
-<a id="invitedSpeakers" class="anchor" href="#invitedSpeakers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Invited Speakers</h2>
-
-<ul>
- <li> 
-   <font size="3" color="black"><b>Joyce Chai, Michigan State University </b></font> 
-   <br />
-</li>
-<li> 
-   <font size="3" color="black"><b>TBA</b></font> 
-   <br/>
-</ul>
-
-<a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<h2>Submissions</h2>
-
-We encourage contributions with either a technical paper (NAACL style, 8 pages without references), a position statement (NAACL style, 4 pages maximum) or an abstract of a published work. NAACL Style files available <a href="https://naacl2019.org/calls/papers">here</a>. Please make submissions via Softconf <a href=""> TBA here</a>.
-
- <a id="important-dates" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Important Dates</h2>
- <ul>
-  <li>Submission Deadline: 15 February 2019</li>
-  <li>Notification: 1 March 2019</li>
-  <li>Camera Ready deadline: 1 April 2019</li>
-  <li>Workshop Day: 6/7 June, 2019</li>
- </ul>
-
-<a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-
-<h2>Organizing Committee</h2> [splu-2019@googlegroups.com]
-
-<table cellspacing="0" cellpadding="0" style="width:100%">
-<tr>
-<td>
- <li><a href="http://www.cs.tulane.edu/%7Epkordjam/">Parisa Kordjamshidi</a></td>
-  <td>Tulane University, <a href="https://www.ihmc.us">IHMC</a></li></td>
-  <td> pkordjam@tulane.edu</td>
-</tr>
-
-<tr>
-<td><li><a href="https://www.ihmc.us/groups/abhatia/">Archna Bhatia</a></li></td>
-<td>IHMC</td>
-<td>abhatia@ihmc.us</td>
-</tr>
-
-<tr> 
- <td><li><a href="https://www.ihmc.us/groups/bdorr/">Bonnie J. Dorr</a></li></td> 
- <td>IHMC</td>
- <td>bdorr@ihmc.us</td> 
- </tr>
-
-<tr>
-<td><li><a href="http://www.cs.rochester.edu/~james/"> James F. Allen</a> </li></td> 
-<td>University of Rochester, IHMC</td>
-<td>jallen@ihmc.us</td> 
-</tr>
-
-</table>
-
-<a id="program-commitee" class="anchor" href="#program-commitee" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-
-<h2>Program Committee</h2>
-<div>
-<table cellspacing="0" cellpadding="0" float="left">
-<tr>
-<td>
-<li>Yoav Artzi</td> <td>Cornell University</td></li>
-  </tr>
- <tr>
-<td><li>Jason Baldridge</td><td>Google Inc. Mountain View CA</li></td>
-</tr>
-  <tr>
-<td><li>John A. Bateman</td><td>Universität Bremen</td></li>
-</tr>
-<tr>
-<td>
-<li>Mehul Bhatt</td><td>Örebro University</td></li>
-</tr>
-<tr>
-<td><li>Raffaella Bernardi</td><td>University of Trento</li></td>
-</tr>
-<tr>
-<td><li>Steven Bethard</td><td>University of Arizona</li></td>
-</tr>
-<tr>
-<td>
-<li> Yonatan Bisk</td> <td>University of Washington</li></td>
-</tr>
-<tr>
-<td><li>Johan Bos</td><td>University of Groningen</li></td>
-</tr>
-<tr>
-<td><li>Guillem Collell</td><td> KU Leuven</li></td>
-</tr>
-<tr>
-<td><li>Joyce Chai</td><td>Michigan State University</li></td>
-</tr>
-<tr>
-<td><li>Simon Dobnik</td><td>CLASP and FLOV, University of Gothenburg Sweden</li></td>
-</tr>
-<tr>
-<td><li>Ekaterina Egorova</td><td>University of Zurich</li></td>
-</tr>
-<tr>
-<td><li>Zoe Falomir</td><td>Universität Bremen</li></td>
-</tr>
-<tr>
-<td><li>Lucian Galescu</td><td>IHMC</li></td>
-<tr>
-<td><li>Julia Hockenmaier</td><td>University of Illinois at Urbana-Champaign</li></td>
-</tr>
-<tr>
-<td><li>Bruno Martins</td><td>University of Lisbon</li></td>
-</tr>
-<tr>
-<td><li>Srini Narayanan</td><td>Google Inc. Mountain View CA</li></td>
-</tr>
-<tr>
-<td><li>Mari Broman Olsen</td><td>Microsoft</li></td>
-</tr>
-<tr>
-<td><li>Martijn van Otterlo</td><td>Vrije Universiteit Amsterdam</li></td>
-</tr>
-<tr>
-<td><li>Ian Perera</td><td>IHMC</li></td>
-</tr>
-<tr>
-<td><li>Kirk Roberts</td><td>The University of Texas</li></td>
-</tr>
-<tr>
-<td><li>Manolis Savva</td><td>Princeton University</li></td>
-</tr>
-<tr>
-<td><li>Kristin Stock</td><td>Massey University of New Zeeland</li></td>
-</tr>
-<tr>
-<td><li>Clare Voss</td><td>ARL</li></td>
-</tr>
- </tr>
-</table>
-</div>
 
 <a id="pastworkshops" class="anchor" href="#pastworkshops" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <h2>Past Workshops</h2>
@@ -258,7 +57,6 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <a href="https://spatial-language.github.io/old_SpLU_workshops/SpLU_2018/"> SpLU 2018</a>
 
 </section>
-
 
 
 <!-- Start of StatCounter Code for Default Guide -->
